--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-demo": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/hvianna/audioMotion-analyzer"
   },
-  "keywords": ["spectrum analyzer", "graphic analyzer", "audio", "visualization"],
+  "keywords": [
+    "spectrum analyzer",
+    "graphic analyzer",
+    "audio",
+    "visualization"
+  ],
   "author": "Henrique Vianna <hvianna@gmail.com> (https://henriquevianna.com)",
-  "license": "AGPL3.0",
+  "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/hvianna/audioMotion-analyzer/issues"
   },
-  "homepage": "https://github.com/hvianna/audioMotion-analyzer"
+  "homepage": "https://github.com/hvianna/audioMotion-analyzer",
+  "devDependencies": {
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
+  }
 }
