--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "audioMotion-analyzer",
   "description": "High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/audioMotion-analyzer.js",
   "scripts": {
     "build-demo": "webpack"
   },
