--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "audioMotion-analyzer",
   "description": "High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "main": "./dist/audioMotion-analyzer.js",
   "scripts": {
     "build-demo": "webpack"
