--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.4.0",
   "main": "./src/audioMotion-analyzer.js",
   "scripts": {
-    "build-demo": "webpack"
+    "start": "npx http-server"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,5 @@
   "bugs": {
     "url": "https://github.com/hvianna/audioMotion-analyzer/issues"
   },
-  "homepage": "https://audiomotion.dev",
-  "devDependencies": {
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  }
+  "homepage": "https://audiomotion.dev"
 }
