--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "audiomotion-analyzer",
   "description": "High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.",
   "version": "3.0.0-beta.2",
-  "main": "./dist/audioMotion-analyzer.min.js",
+  "main": "./src/audioMotion-analyzer.js",
   "module": "./src/audioMotion-analyzer.js",
   "scripts": {
-    "start": "npx http-server",
-    "build": "webpack"
+    "start": "npx http-server"
   },
   "repository": {
     "type": "git",
@@ -24,9 +23,5 @@
   "bugs": {
     "url": "https://github.com/hvianna/audioMotion-analyzer/issues"
   },
-  "homepage": "https://audiomotion.dev",
-  "devDependencies": {
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
-  }
+  "homepage": "https://audiomotion.dev"
 }
