Remove .npmignore; add 'files' and 'funding' to package.json.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   "exports": {
     ".": "./src/audioMotion-analyzer.js"
   },
+  "files": [
+    "src/**/*.js",
+    "src/**/*.d.ts"
+  ],
+  "funding": {
+    "type": "Ko-fi",
+    "url": "https://ko-fi.com/hvianna"
+  },
   "scripts": {
     "start": "npx http-server"
   },
