--- a/package.json
+++ b/package.json
@@ -5,20 +5,6 @@
   "main": "./dist/index.js",
   "module": "./src/audioMotion-analyzer.js",
   "types": "./src/index.d.ts",
-  "babel": {
-    "plugins": [
-      [
-        "@babel/plugin-transform-modules-umd",
-        {
-          "globals": {
-            "audiomotionanalyzer": "Lala"
-          },
-          "exactGlobals": true
-        }
-      ]
-    ],
-    "moduleId": "audiomotionanalyzer"
-  },
   "exports": {
     ".": {
       "import": "./src/audioMotion-analyzer.js",
@@ -59,7 +45,6 @@
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.3",
     "@babel/plugin-transform-modules-umd": "^7.24.1",
-    "@babel/preset-env": "^7.24.3",
-    "babel-plugin-add-module-exports": "^1.0.4"
+    "@babel/preset-env": "^7.24.3"
   }
 }
