--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://ko-fi.com/hvianna"
   },
   "scripts": {
-    "build": "babel src/audioMotion-analyzer.js --out-file dist/index.js",
+    "build": "rm -rf dist/* && babel src/audioMotion-analyzer.js --out-file dist/index.js && sed -i -e 's/= mod.exports;/= mod.exports.default;/' dist/index.js",
+    "prepare": "npm run build",
     "start": "npx http-server"
   },
   "repository": {
