--- a/package.json
+++ b/package.json
@@ -1,51 +1,47 @@
 {
-  "name": "audiomotion-analyzer",
-  "description": "High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.",
-  "version": "4.5.0",
-  "main": "./dist/index.js",
-  "module": "./src/audioMotion-analyzer.js",
-  "types": "./src/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./src/audioMotion-analyzer.js",
-      "require": "./dist/index.js",
-      "types": "./src/index.d.ts"
-    }
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "funding": {
-    "type": "Ko-fi",
-    "url": "https://ko-fi.com/hvianna"
-  },
-  "scripts": {
-    "build": "rm -rf dist/* && babel src/audioMotion-analyzer.js --out-file dist/index.js && sed -i -e 's/= mod.exports;/= mod.exports.default;/' dist/index.js",
-    "prepare": "npm run build",
-    "start": "npx http-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hvianna/audioMotion-analyzer"
-  },
-  "keywords": [
-    "spectrum analyzer",
-    "graphic analyzer",
-    "audio",
-    "music",
-    "visualization"
-  ],
-  "author": "Henrique Vianna <hvianna@gmail.com> (https://henriquevianna.com)",
-  "license": "AGPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/hvianna/audioMotion-analyzer/issues"
-  },
-  "homepage": "https://audiomotion.dev",
-  "devDependencies": {
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/plugin-transform-modules-umd": "^7.24.1",
-    "typescript": "^5.4.5"
-  }
+	"name": "audiomotion-analyzer",
+	"description": "High-resolution real-time graphic audio spectrum analyzer JavaScript module with no dependencies.",
+	"version": "4.5.0",
+	"main": "./dist/esm/index.mjs",
+	"module": "./dist/esm/index.mjs",
+	"exports": {
+		".": {
+			"import": "./dist/esm/index.mjs",
+			"require": "./dist/cjs/index.js",
+			"types": "./dist/types/index.d.ts"
+		}
+	},
+	"files": ["dist", "src"],
+	"funding": {
+		"type": "Ko-fi",
+		"url": "https://ko-fi.com/hvianna"
+	},
+	"scripts": {
+		"build": "rm -rf dist/* && swc src/audioMotion-analyzer.ts -C module.type=commonjs --out-file dist/cjs/index.js && swc src/audioMotion-analyzer.ts --out-file dist/esm/index.mjs && tsc && mv dist/types/audioMotion-analyzer.d.ts dist/types/index.d.ts",
+		"prepare": "npm run build",
+		"start": "npx http-server"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/hvianna/audioMotion-analyzer"
+	},
+	"keywords": [
+		"spectrum analyzer",
+		"graphic analyzer",
+		"audio",
+		"music",
+		"visualization"
+	],
+	"author": "Henrique Vianna <hvianna@gmail.com> (https://henriquevianna.com)",
+	"license": "AGPL-3.0-or-later",
+	"bugs": {
+		"url": "https://github.com/hvianna/audioMotion-analyzer/issues"
+	},
+	"homepage": "https://audiomotion.dev",
+	"devDependencies": {
+		"@swc/cli": "^0.3.12",
+		"@swc/core": "^1.6.3",
+		"@types/node": "^20.14.6",
+		"typescript": "^5.4.5"
+	}
 }
