--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hvianna/audioMotion-analyzer"
+    "url": "git+https://github.com/hvianna/audioMotion-analyzer.git"
   },
   "keywords": [
     "spectrum analyzer",
